OwnYourDrive-Dev/force-app/main/default/objects/Service_History__c/Service_History__c.object-meta.xml
<CustomObject>
    <description>This is for storing the Service history of the vehicle</description>
    <label>Service History</label>
    <nameField>
        <displayFormat>VSH-{00000}</displayFormat>
        <label>Service History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>