OwnYourDrive-Dev/force-app/main/default/objects/Service_History__c/fields/Number_of_Kilometers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Kilometers__c</fullName>
    <description>This should contain the distance covered by the vehicle by the time of service</description>
    <label>Number of Kilometers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>