OwnYourDrive-Dev/force-app/main/default/objects/Service_History__c/fields/Service_History_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_History_Number__c</fullName>
    <description>This is for the Vehicle service History</description>
    <label>Service History Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>