OwnYourDrive-Dev/force-app/main/default/objects/Service_History__c/fields/Vehicle_Service__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Service__c</fullName>
    <label>Vehicle Service</label>
    <referenceTo>Vehicle_Service__c</referenceTo>
    <relationshipLabel>Service History</relationshipLabel>
    <relationshipName>Service_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>