OwnYourDrive-Dev/force-app/main/default/objects/Service_History__c/fields/Vehicle_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Service_Date__c</fullName>
    <description>This should the date of when the Vehicle is serviced</description>
    <label>Vehicle Service Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>